--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'org.lucasr.dspec:dspec:0.1.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'it.neokree:MaterialTabs:0.11'
 }
