--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -28,10 +28,12 @@
             android:name=".activities.ThirdActivity"
             android:label="@string/title_activity_third"
             android:theme="@style/AppTheme">
+         <!--   android:theme="@style/AppTheme">-->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="activities.MainActivity"></meta-data>
+                android:value="activities.MainActivity" />
         </activity>
+
     </application>
 
 </manifest>
