* managed to get tabhost with parallax animations

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -28,12 +28,13 @@
             android:name=".activities.ThirdActivity"
             android:label="@string/title_activity_third"
             android:theme="@style/AppTheme">
-         <!--   android:theme="@style/AppTheme">-->
+
+            <!-- android:theme="@style/AppTheme"> -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="activities.MainActivity" />
         </activity>
-
+        <activity android:name=".activities.FourthActivity"></activity>
     </application>
 
 </manifest>
