--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.example.hiciu.materialtest1"
@@ -28,4 +28,6 @@ dependencies {
     compile 'org.lucasr.dspec:dspec:0.1.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'it.neokree:MaterialTabs:0.11'
+    compile 'com.github.ksoichiro:android-observablescrollview'
+    compile 'com.github.florent37:materialviewpager:1.1.3'
 }
